--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "file-loader": "^6.2.0",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
     "style-resources-loader": "^1.4.1",
+    "url-loader": "^4.1.1",
     "vue-cli-plugin-style-resources-loader": "~0.1.5"
   }
 }
